Fix text wrap

--- a/src/assets/syntax-highlight.css
+++ b/src/assets/syntax-highlight.css
@@ -3,6 +3,7 @@
   color: var(--input-text);
   font-family: monospace;
   overflow-x: auto;
+  text-wrap: auto;
 }
 
 .hljs-selector-class,
